/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Enum.java to edit this template
 */
package Model;

/**
 *
 * @author Gracielle Salvador
 */

/**
 * Enum representing the status of a leave request.
 */
public enum LeaveStatus {
    
    /** The leave request is pending approval */
    PENDING,
    
     /** The leave request has been approved */
    APPROVED,
    
    /** The leave request has been rejected */
    REJECTED
}
